<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".AddChangeHabitActivity">

        <EditText
            android:id="@+id/newName"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/newDescription"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/newPriority"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:entries="@array/habit_priorities" />

        <RadioGroup
            android:id="@+id/newType"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:text="@string/harmful" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:text="@string/useful" />

        </RadioGroup>

        <EditText
            android:id="@+id/newRunAmount"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/run_amount"
            android:inputType="number" />

        <EditText
            android:id="@+id/newPeriodicity"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="8dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/periodicity"
            android:inputType="number" />

        <HorizontalScrollView
            android:id="@+id/colorScroll"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="8dp">

            <LinearLayout
                android:id="@+id/colorScrollLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </LinearLayout>
</ScrollView>